<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.MainActivity">

   <RelativeLayout
           android:id="@+id/root_top"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="50dp"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">


      <TextView
              android:textStyle="bold"
              android:layout_centerInParent="true"
              android:id="@+id/top_text"
              android:textSize="30sp"
              android:textColor="@color/login_text_color1"
              android:text="@string/login_text1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
      />

      <ImageView

              android:layout_centerVertical="true"
              android:layout_marginRight="20dp"
              android:layout_toLeftOf="@id/top_text"
              android:src="@mipmap/nav_logo"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

   </RelativeLayout>

   <RelativeLayout
           android:layout_marginTop="50dp"
           android:layout_below="@id/root_top"
           android:background="@mipmap/index_banner"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

      <androidx.cardview.widget.CardView
              android:layout_marginRight="140dp"
              android:layout_alignParentRight="true"
              android:id="@+id/cv_add"
              app:cardBackgroundColor="@color/white"
              android:layout_marginTop="30dp"
              android:layout_gravity="center_horizontal"
              android:layout_width="200dp"
              android:layout_height="250dp"
              app:cardCornerRadius="6dp"
              app:cardElevation="3dp"
              app:cardUseCompatPadding="true"
      >
         <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">

            <TextView
                    android:id="@+id/do_what"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:text="@string/login_text2"
                    android:textColor="@color/login_text_color1"
                    android:textSize="16sp"
                    android:textStyle="bold"
            />

            <RelativeLayout
                    android:background="@drawable/bt_login_shape"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

                  <EditText
                          android:inputType="textVisiblePassword"
                          android:layout_margin="2dp"
                          android:paddingLeft="10dp"
                          android:drawablePadding="10dp"
                          android:drawableLeft="@mipmap/icon_account"
                          android:layout_centerInParent="true"
                          android:textSize="13sp"
                          android:hint="@string/login_text3"
                          android:textColor="@color/login_text_color3"
                          android:id="@+id/et_username"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:background="@drawable/selector_bg_edit_2"
                          android:textCursorDrawable="@drawable/bg_input_cursor_2"
                          android:paddingBottom="2dp"
                  />
            </RelativeLayout>

            <RelativeLayout
                    android:background="@drawable/bt_login_shape"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="30dp">

               <EditText
                       android:layout_margin="2dp"
                       android:paddingLeft="10dp"
                       android:drawablePadding="10dp"
                       android:drawableLeft="@mipmap/icon_password"
                       android:focusableInTouchMode="true"
                       android:layout_centerInParent="true"
                       android:textSize="13sp"
                       android:hint="@string/login_text4"
                       android:textColor="@color/login_text_color3"
                       android:id="@+id/et_password"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:inputType="textPassword"
                       android:background="@drawable/selector_bg_edit_2"
                       android:textCursorDrawable="@drawable/bg_input_cursor_2"
                       android:paddingBottom="2dp"
               />
            </RelativeLayout>

            <com.google.android.material.checkbox.MaterialCheckBox

                    android:id="@+id/cb_autologin"
                    android:checked="true"
                    android:scaleX="0.8"
                    android:scaleY="0.8"
                    android:textSize="12sp"
                    android:layout_marginTop="12dp"
                    android:layout_marginStart="5dp"
                    android:hint="@string/login_text5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

            />


            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                    android:textColor="@color/white"
                    android:layout_marginTop="10dp"
                    android:id="@+id/bt_login"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="42dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginEnd="18dp"
                    app:spinning_bar_width="4dp"
                    app:spinning_bar_color="@color/white"
                    app:spinning_bar_padding="6dp" >

            </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>


         </LinearLayout>
      </androidx.cardview.widget.CardView>

   </RelativeLayout>

   <TextView
           android:text="@string/login_text9"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginBottom="30dp"
   />


</RelativeLayout>