<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg1"
        tools:context=".activity.MainActivity">

    <RelativeLayout
            android:id="@+id/top_root"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerHorizontal="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.ctd.cymanage.widget.SelectBarView
                android:layout_marginLeft="80dp"
                android:id="@+id/select_area"
                app:typeName="@string/paymentsituation_text1"
                android:layout_width="300dp"
                android:layout_height="40dp">

        </com.ctd.cymanage.widget.SelectBarView>

        <com.ctd.cymanage.widget.SelectBarView
                android:layout_toRightOf="@id/select_area"
                android:id="@+id/select_year"
                app:typeName="@string/paymentsituation_text2"
                android:layout_marginLeft="40dp"
                android:layout_width="300dp"
                android:layout_height="40dp">

        </com.ctd.cymanage.widget.SelectBarView>

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="80dp"
                android:textColor="@color/white"
                android:id="@+id/bt_search"
                android:layout_gravity="center_horizontal"
                android:layout_width="80dp"
                android:layout_height="36dp"
                app:spinning_bar_width="4dp"
                app:spinning_bar_color="@color/white"
                app:spinning_bar_padding="6dp" >

        </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>


    </RelativeLayout>

    <RelativeLayout
            android:background="@drawable/bg_white_8"
            android:paddingTop="10dp"
            android:paddingBottom="20dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:layout_margin="10dp"
            android:layout_below="@id/top_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:id="@+id/desc_root"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:id="@+id/chart_des"
                    android:textColor="@color/chart_color1"
                    android:textSize="22sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/paymentsituation_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <TextView
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:id="@+id/chart_des_1"
                    android:textColor="@color/chart_color1"
                    android:textSize="16sp"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </RelativeLayout>

        <com.github.mikephil.charting.charts.LineChart
                android:layout_below="@id/desc_root"
                android:id="@+id/chart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />


    </RelativeLayout>



</RelativeLayout>