<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg1"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

        <RelativeLayout
                android:id="@+id/top_root"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ctd.cymanage.widget.SelectBarView
                        android:id="@+id/select_year_start"
                        app:typeName=""
                        android:layout_width="200dp"
                        android:layout_height="40dp">

                </com.ctd.cymanage.widget.SelectBarView>

                <View
                        android:background="@color/selectbarview_color1"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/view_line"
                        android:layout_toRightOf="@id/select_year_start"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:layout_height="2dp"/>
                <com.ctd.cymanage.widget.SelectBarView
                        android:layout_toRightOf="@id/view_line"
                        android:id="@+id/select_year_end"
                        app:typeName=""
                        android:layout_marginLeft="-16dp"
                        android:layout_width="200dp"
                        android:layout_height="40dp">

                </com.ctd.cymanage.widget.SelectBarView>

                <com.ctd.cymanage.widget.SelectBarView
                        android:layout_toRightOf="@id/select_year_end"
                        android:id="@+id/select_client"
                        app:typeName=""
                        android:layout_width="250dp"
                        android:layout_height="40dp">

                </com.ctd.cymanage.widget.SelectBarView>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="120dp"
                        android:textColor="@color/white"
                        android:id="@+id/bt_search"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="@color/white"
                        app:spinning_bar_padding="6dp" >

                </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/white"
                        android:id="@+id/bt_output"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="@color/white"
                        app:spinning_bar_padding="6dp" >

                </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>


        </RelativeLayout>

        <LinearLayout
                android:background="@drawable/bg_white_8"
                android:layout_margin="10dp"
                android:layout_below="@id/top_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/paymentinfo_text4"
                                android:id="@+id/chart_des_1"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/piechart"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                        />
                </RelativeLayout>

                <View
                        android:background="@color/main_bg1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>


                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/paymentinfo_text5"
                                android:id="@+id/chart_des_2"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    <View
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="20dp"
                            android:layout_below="@id/chart_des_2"
                            android:id="@+id/line"
                            android:background="@color/main_bg1"
                            android:layout_width="match_parent"
                            android:layout_height="1px"/>

                    <LinearLayout
                            android:id="@+id/list_info"
                            android:layout_marginTop="4dp"
                            android:layout_below="@id/line"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                        <TextView
                                android:textSize="18sp"
                                android:layout_marginLeft="10dp"
                                android:textColor="@color/selectbarview_color1"
                                android:text="@string/paymentinfo_text7"
                                android:ellipsize="end"
                                android:layout_centerHorizontal="true"
                                android:lines="1"
                                android:id="@+id/tv_left"
                                android:layout_width="40dp"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:textSize="18sp"
                                android:layout_marginLeft="20dp"
                                android:textColor="@color/selectbarview_color1"
                                android:text="@string/paymentinfo_text8"
                                android:ellipsize="end"
                                android:layout_centerHorizontal="true"
                                android:lines="1"
                                android:id="@+id/tv_center"
                                android:layout_weight="1"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"/>
                        <TextView
                                android:textSize="18sp"
                                android:layout_marginRight="20dp"
                                android:textColor="@color/selectbarview_color1"
                                android:text="@string/paymentinfo_text9"
                                android:ellipsize="end"
                                android:layout_centerHorizontal="true"
                                android:lines="1"
                                android:id="@+id/tv_right"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>


                    </LinearLayout>



                        <androidx.recyclerview.widget.RecyclerView
                                android:overScrollMode="never"
                                android:layout_below="@id/list_info"
                                android:id="@+id/cashinfo_recyclerView"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"/>

                </RelativeLayout>
                <View
                        android:background="@color/main_bg1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>
                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/paymentinfo_text6"
                                android:id="@+id/chart_des_3"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                    <TextView
                            android:layout_marginTop="40dp"
                            android:layout_marginLeft="20dp"
                            android:text="@string/paymentinfo_text10"
                            android:id="@+id/chart_des_4"
                            android:textColor="@color/selectbarview_color1"
                            android:textSize="14sp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>

                    <com.github.mikephil.charting.charts.BarChart
                            android:layout_marginTop="50dp"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:id="@+id/barchart"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="10dp"
                             />

                </RelativeLayout>





        </LinearLayout>

</RelativeLayout>