<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg1"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">


        <RelativeLayout
                android:id="@+id/top_root"
                android:gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_centerHorizontal="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.ctd.cymanage.widget.SelectBarView
                        android:id="@+id/select_year_start"
                        app:typeName=""
                        android:layout_width="200dp"
                        android:layout_height="40dp">

                </com.ctd.cymanage.widget.SelectBarView>

                <View
                        android:background="@color/selectbarview_color1"
                        android:layout_marginLeft="10dp"
                        android:id="@+id/view_line"
                        android:layout_toRightOf="@id/select_year_start"
                        android:layout_centerVertical="true"
                        android:layout_width="30dp"
                        android:layout_height="2dp"/>
                <com.ctd.cymanage.widget.SelectBarView
                        android:layout_toRightOf="@id/view_line"
                        android:id="@+id/select_year_end"
                        app:typeName=""
                        android:layout_marginLeft="-16dp"
                        android:layout_width="200dp"
                        android:layout_height="40dp">

                </com.ctd.cymanage.widget.SelectBarView>


                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="120dp"
                        android:textColor="@color/white"
                        android:id="@+id/bt_search"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="@color/white"
                        app:spinning_bar_padding="6dp" >

                </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>

                <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/white"
                        android:id="@+id/bt_output"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="80dp"
                        android:layout_height="36dp"
                        app:spinning_bar_width="4dp"
                        app:spinning_bar_color="@color/white"
                        app:spinning_bar_padding="6dp" >

                </br.com.simplepass.loading_button_lib.customViews.CircularProgressButton>


        </RelativeLayout>

        <LinearLayout
                android:background="@drawable/bg_white_8"
                android:layout_margin="10dp"
                android:layout_below="@id/top_root"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/paymentinfo_text4"
                                android:id="@+id/chart_des_1"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/piechart_area"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                        />
                </RelativeLayout>

                <View
                        android:background="@color/main_bg1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>


                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/givecard_text1"
                                android:id="@+id/chart_des_2"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <com.github.mikephil.charting.charts.PieChart
                                android:id="@+id/piechart_type"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                        />

                </RelativeLayout>
                <View
                        android:background="@color/main_bg1"
                        android:layout_width="1dp"
                        android:layout_height="match_parent"/>
                <RelativeLayout
                        android:layout_marginTop="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">

                        <TextView
                                android:textStyle="bold"
                                android:text="@string/givecard_text7"
                                android:id="@+id/chart_des_3"
                                android:textColor="@color/selectbarview_color1"
                                android:textSize="22sp"
                                android:layout_centerHorizontal="true"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        <com.github.mikephil.charting.charts.BarChart
                                android:layout_marginTop="50dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginRight="20dp"
                                android:id="@+id/barchart_card"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginBottom="10dp"
                        />

                </RelativeLayout>


        </LinearLayout>

</RelativeLayout>